# AI_Frameworks_Ex

./: .gitignore  pyproject.toml
Block 1/: Assignment_Uebung1_Setup.md  Assignment_Uebung2_EDA.md  Assignment_Uebung3_Projekt_GPT2_Inspektion.docx  Notebook_01_setup_check.ipynb  Notebook_project_01_model_inspection.ipynb
Block 1/block2_sklearn_mlflow.egg-info/: PKG-INFO  requires.txt
Block 1/notebooks/: Notebook_02_eda.ipynb  pyproject.toml
Block 1/notebooks/block2_sklearn_mlflow.egg-info/: SOURCES.txt
Block 2/: Assignment_Block2_Predictive_Maintenance.docx  Notebook_Block2_Predictive_Maintenance.ipynb  Notebook_Block2_Predictive_Maintenance_SOLUTION.ipynb
Block 3/: Assignment_Block3_Audio_Anomaly_Detection.docx  Notebook_Block3_Audio_Anomaly_Detection.ipynb
Block4/: Live Demo.ipynb  Notebook_Block4_HuggingFace_Erklaerung.ipynb  Notebook_Block4_HuggingFace_Uebung_SOLUTION.ipynb
assignement/: 01_Model_Inspection.ipynb  02_Logit_Lens.ipynb  03_Attention_Analysis.ipynb  04_Linear_Probing.ipynb  05_Activation_Patching.ipynb  config.py  export_hu_liu_one_token_words.py  hu_liu_sentiment_word_pairs_flat.json  lexicon_utils.py  main.py  model_utils.py  plotting_utils.py  sentiment_embeddings.py
assignement/inputs/: hu_liu_sentiment_word_pairs_by_field.json  sentiment_prompts.json
assignement/output/json/: hu_liu_logistic_regression_split.json  hu_liu_negative_one_token_words.json  hu_liu_positive_one_token_words.json
assignement/utils/: config.py  lexicon_utils.py  linear_probe.py  model_utils.py  plotting_utils.py  sentiment_embeddings.py  sst2_analysis.py
