[project]
name = "block3-pytorch"
version = "0.1.0"
description = "Block 3: PyTorch Deep Dive — Autoencoder & Anomalieerkennung"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "umap-learn",
    "torch>=2.0",
    "torchaudio",
    "mlflow>=2.0",
    "jupyter",
    "ipykernel",
    "transformers",
    "nltk",
    "accelerate",
    "seaborn>=0.13.2",
    "polars",
]

[tool.uv]
dev-dependencies = []

# === SETUP-ANLEITUNG ===
#
# 1. Ordner lokal kopieren (nicht auf Netzlaufwerk!):
#    cp -r "Block 3" ~/Desktop/Block3
#    cd ~/Desktop/Block3
#
# 2. Environment erstellen und Pakete installieren:
#    uv sync
#
# 3. Jupyter starten:
#    uv run jupyter notebook
#
# ODER in Cursor/VS Code:
#    uv run python -m ipykernel install --user --name block3 --display-name "Block 3"
#    → Dann in Cursor: Kernel "Block 3" auswählen
