[project]
name = "block2-sklearn-mlflow"
version = "0.1.0"
description = "Block 2: Scikit-Learn Pipelines & MLflow Experiment Tracking"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "mlflow>=2.0",
    "jupyter",
    "ipykernel",
    "polars>=1.41.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[tool.uv]
dev-dependencies = []